--- a/src/ionic-datepicker-modal.html
+++ b/src/ionic-datepicker-modal.html
@@ -4,21 +4,7 @@
   </ion-header-bar>
   <ion-content class="ionic_datepicker_modal_content">
     <div class="ionic_datepicker">
-      <div ng-if="!selectMultiple" class="selected_date_full">{{selectedDateFull | date:"dd-MM-yyyy"}}</div>
-
-      <div ng-if="selectMultiple && datesSelected.length" class="selected_dates_full">
-        <div ng-repeat="date in datesSelected track by $index">
-          <div class="row" ng-if="$index % 3 == 0">
-            <div class="col" ng-repeat="_date in [datesSelected[$index], datesSelected[$index + 1], datesSelected[$index + 2]] track by $index">
-              <button ng-if="_date"
-                class="button button-light button-small button-block icon-right ion-close-circled"
-                ng-click="removeFromSelectedDates(_date)">
-                {{_date.dateObj | date:"dd/MM/yyyy"}}
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div ng-if="!selectMultipleDates" class="selected_date_full">{{selectedDate.date | date:"dd-MM-yyyy"}}</div>
 
       <div class="row">
         <div class="col col-10 left_arrow" ng-click="prevMonth()"
@@ -89,9 +75,9 @@
   </ion-content>
   <ion-footer-bar  ng-class="modalFooterColor">
     <div class="row no_padding">
-      <div class="text-center" ng-class="showTodayButton == 'true' ? 'col-33' : 'col-50'" ng-click="closeIonicDatePickerModal()"><button class="button button-clear">{{closeLabel}}</button></div>
-      <div class="col-34 text-center" ng-if="showTodayButton == 'true'" ng-click="setIonicDatePickerTodayDate()"><button class="button button-clear">{{todayLabel}}</button></div>
-      <div class="text-center" ng-class="showTodayButton == 'true' ? 'col-33' : 'col-50'" ng-click="setIonicDatePickerDate()"><button class="button button-clear">{{setLabel}}</button></div>
+      <button class="button button-clear col" ng-if="showCloseButton" ng-click="closeIonicDatePickerModal()">{{closeLabel}}</button>
+      <button class="button button-clear col" ng-if="showTodayButton" ng-click="setIonicDatePickerTodayDate()">{{todayLabel}}</button>
+      <button class="button button-clear col" ng-if="showSetButton" ng-click="setIonicDatePickerDate()">{{setLabel}}</button>
     </div>
   </ion-footer-bar>
 </ion-modal-view>
