--- a/src/ionic-datepicker-modal.html
+++ b/src/ionic-datepicker-modal.html
@@ -78,7 +78,7 @@
         </div>
       </div>
       <div class="error_msg padding-horizontal"
-           ng-show="selectedDate.submitted === true && selectedDate.selected === false">{{errorMsgLabel}}
+           ng-show="selectedDate.submitted === true && !selectedDate.date">{{errorMsgLabel}}
       </div>
     </div>
   </ion-content>
