Bugfix and improved error msg style

--- a/src/ionic-datepicker-modal.html
+++ b/src/ionic-datepicker-modal.html
@@ -77,8 +77,8 @@
           </div>
         </div>
       </div>
-      <div class="error_msg padding-horizontal"
-           ng-show="selectedDate.submitted === true && !selectedDate.date">{{errorMsgLabel}}
+      <div class="error_msg padding-horizontal assertive text-center"
+           ng-show="selectedDate.submitted === true && !selectedDate.date"><strong>{{errorMsgLabel}}</strong>
       </div>
     </div>
   </ion-content>
